test/fail/M0175.mo
to_candid ([var 1])
